artifacts/latest/snapshots/splunk-dev-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: selfsigned
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
    creationTimestamp: "2026-04-11T15:18:14Z"
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: splunk-dev
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: splunk
    namespace: splunk-dev
    resourceVersion: "1775920743915199021"
    uid: f61a4340-9d30-4587-b8d5-87a58aa6ac31
  spec:
    ingressClassName: nginx
    rules:
    - host: splunk-dev.example.com
      http:
        paths:
        - backend:
            service:
              name: splunk
              port:
                number: 8091
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - splunk-dev.example.com
      secretName: splunk-web-tls
  status:
    loadBalancer:
      ingress:
      - ip: 34.171.180.217
kind: List
metadata:
  resourceVersion: ""
